--- a/src/index.html
+++ b/src/index.html
@@ -46,14 +46,10 @@
     <div class="info2">
          <h2>Что я умею</h2>
          <ul>
-             <li>Веб-Дизайн</li>
-             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores omnis aliquam, eligendi, vitae pariatur delectus.</span>
-             <li>Разработка</li>
-             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis beatae minima velit est numquam! Accusantium, veniam!</span>
-             <li>СЕО-Оптимизация??</li>
-             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae reprehenderit, porro praesentium, pariatur impedit eligendi!</span>
-             <li>Маркетинг</li>
-             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ut harum beatae, odit, distinctio ipsam explicabo?</span>
+             <li><b>Веб-Дизайн</b><br><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsa ad aspernatur, omnis quod, porro repudiandae!</span></li>
+             <li><b>Разработка</b><br><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum natus illo quae, eos ipsam, voluptatem quisquam.</span></li>
+             <li><b>СЕО-Оптимизация??</b><br><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere molestias fuga porro, praesentium repellat, pariatur!</span></li>
+             <li><b>Маркетинг</b><br><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis suscipit quisquam tempore, soluta similique, vero neque?</span></li>
          </ul>
     </div>
     
